JWT + LOGIN API COMPLETED, AUTHORIZATION + ROLE ADJUSTMENT